cabal-version: 1.12

name:           aoc2019
version:        0.1.0.0
build-type:     Simple

library
  exposed-modules:
      Lib
      Day1
      Day2
  other-modules:
      Paths_aoc2019
  hs-source-dirs:
      lib/
  default-extensions: OverloadedStrings
  ghc-options: -W -O2
  build-depends:
      base
    , aeson
    , filepath
    , megaparsec
    , transformers
    , mtl
    , optparse-applicative
    , parser-combinators
    , vector
    , yaml
    , raw-strings-qq
    , optics
    , rio
  default-language: Haskell2010

executable aoc2019
  main-is: aoc2019.hs
  other-modules:
      Paths_aoc2019
  hs-source-dirs:
      execs
  default-extensions: OverloadedStrings
  ghc-options: -W -O2
  build-depends:
      aoc2019
    , base
    , filepath
    , optparse-applicative
  if os(darwin)
    extra-libraries:
        iconv
  default-language: Haskell2010
